Wellformedness; minor edits.

--- a/science/hdm_scienceday.html
+++ b/science/hdm_scienceday.html
@@ -434,7 +434,7 @@
     <ul>
       <li>Kraus, Richard Cuart: 
         <i class="booktitle">The Cultural Revolution: A Very Short Introduction</i>. Oxford: Oxford University Press, 2012. 
-        <!--a href=""></a><abbr-->ISBN</abbr> 9780199740550.
+        <a href="https://global.oup.com/academic/product/the-cultural-revolution-a-very-short-introduction-9780199740550"><abbr>ISBN</abbr> 9780199740550</a>.
       </li>
       <li>Schoenhals, Michael: 
         <i class="booktitle">China's Cultural Revolution, 1966-69: Not a Dinner Party</i>. Routledge, 1997. (352 pages)
@@ -598,6 +598,13 @@
     </ul>
     <!-- Andre Schmid: Korea Between Empires 1895-1919. Columbia University Press, 2002. -->
 
+    <!-- Late Ottoman Empire / Turkey:
+      * Ryan Gingeras: Sorrowful Shores: Violence, Ethnicity, and the End of the Ottoman Empire 1912-1923. Oxford University Press, 2011: https://global.oup.com/academic/product/sorrowful-shores-9780199698349
+      * Ryan Gingeras: Mustafa Kemal Atatürk: Heir to the Empire. Oxford University Press, 2015: https://global.oup.com/academic/product/mustafa-kemal-atatrk-9780190250010
+      * Ryan Gingeras: Fall of the Sultanate: The Great War and the End of the Ottoman Empire 1908-1922. Oxford University Press, 2016: https://global.oup.com/academic/product/fall-of-the-sultanate-9780199676071 
+      * Ronald Grigor Suny, Fatma Müge Göçek, and Norman M. Naimark, eds.: A Question of Genocide: Armenians and Turks at the End of the Ottoman Empire. Oxford University Press, 2011.
+      * Donald Bloxham: The Great Game of Genocide: Imperialism, Nationalism, and the Destruction of the Ottoman Armenians. Oxford UP, 2007.
+    -->
 
     <h3>European History</h3>
     <h4>The Crusades Through Arab / Islamic Eyes</h4>
@@ -709,7 +716,8 @@
       <li>Disability History Scotland: 
         <a href="http://disabilityhistoryscotland.org/wiki/disability-history-wiki/the-scottish-enlightenment/">The Scottish Enlightenment</a>.
         <br />
-        Alexander Broadie: <a href="http://www.birlinn.co.uk/The-Scottish-Enlightenment-9781841586403.html">Scottish Enlightenment</a> (Birlinn, 2007)<
+        Alexander Broadie: 
+        <a href="http://www.birlinn.co.uk/The-Scottish-Enlightenment-9781841586403.html">Scottish Enlightenment</a> (Birlinn, 2007)
       </li>
       <li>Broadie, Alexander: 
         <i class="booktitle">The Cambridge Companion to the Scottish Enlightenment</i>. Cambridge University Press, 2003.
@@ -753,7 +761,10 @@
         <i class="booktitle">Kulturgeschichte des Klimas</i>. Dtv, 2012. 4. Auflage, 2014.
         <a href="http://www.dtv.de/buecher/kulturgeschichte_des_klimas_34652.html"><abbr>ISBN</abbr> 978-3-423-34652-8</a>.
       </li>
-      <li>(Also check climate change and Chinese history (e.g. end of the Ming dynasty).)
+      <li>(Also check climate change and Chinese history (<abbr>e.g.</abbr> end of the Ming dynasty)
+        and the relevance of climate to the rise and fall of the Mongol empire:
+        <a href="https://www.theguardian.com/news/2012/sep/23/weatherwatch-climate-ghengis-khan-mongolia">Weatherwatch: Climate helped Genghis Khan create the Mongol empire</a>,
+        <i class="newspaper">The Guardian</i>, 23.09.2012.)
       </li>
     </ul>
 
@@ -786,6 +797,9 @@
       </li>
       <li>
         <a href="https://en.wikipedia.org/wiki/Esperanto">Esperanto</a>.
+      </li>
+      <li>
+        Dutch; arguably the easiest foreign language for native speakers of German.
       </li>
     </ul>
 
