Articles from Psychology Today.

--- a/philosophy/religion.html
+++ b/philosophy/religion.html
@@ -158,6 +158,28 @@
         <a href="https://www.youtube.com/watch?v=DTepA-WV_oE">Responding to Pastor Rick Warren</a> 
         (YouTube, 25 minutes): presentation at <abbr>TED</abbr> 2007.
       </li>
+      <li><span lang="nl">van Vugt, Mark</span>:
+        <a href="https://www.psychologytoday.com/blog/naturally-selected/201609/god-is-watching-you">God Is Watching You. Why religious beliefs foster trust and cooperation within society</a>,
+        <i class="blog">Naturally Selected</i> (a blog on <i class="website">Psychology Today</i>), 15.09.2016.
+      </li>
+      <li>Barber, Nigel:
+        <a href="https://www.psychologytoday.com/blog/the-human-beast/201005/why-atheism-will-replace-religion">Why Atheism Will Replace Religion</a>,
+        <i class="blog">The Human Beast</i> (a blog on <i class="website">Psychology Today</i>), 18.05.2010.
+      </li>
+      <li>Kashdan, Todd B.:
+        <a href="https://www.psychologytoday.com/blog/curious/201006/why-does-religion-persist-look-bizarre-ideas-hypocrisy-and-gods-obsession-sex">Why Does Religion Persist? A Look at Bizarre Ideas, Hypocrisy, and God's Obsession with Sex</a>,
+        <i class="blog">Curious?</i> (a blog on <i class="website">Psychology Today</i>), 10.06.2010.
+        (Response to Nigel Barber's blogpost.)
+      </li>
+      <li>Gerloff, Pamela:
+        <a href="https://www.psychologytoday.com/blog/the-possibility-paradigm/201108/another-viewpoint-re-will-atheism-replace-religion">Another Viewpoint re: Will Atheism Replace Religion?</a>,
+        <i class="blog">The Possibility Paradigm</i> (a blog on <i class="website">Psychology Today</i>), 08.08.2011.
+        (Another response to Nigel Barber's blogpost.)
+      </li>
+      <li>Barber, Nigel:
+        <a href="https://www.psychologytoday.com/blog/the-human-beast/201107/why-atheism-will-replace-religion-new-evidence">Why Atheism Will Replace Religion: New Evidence</a>,
+        <i class="blog">The Human Beast</i> (a blog on <i class="website">Psychology Today</i>), 14.07.2011.
+      </li>
     </ul>
     <!-- 
       Jerry Coyne: "I got the book! You know, the one with the best arguments for God", 20.03.2015: https://whyevolutionistrue.wordpress.com/2014/03/20/i-got-the-book-you-know-the-one-with-the-best-arguments-for-god/
@@ -169,6 +191,8 @@
       TestTube News: "What Is The World's Most Peaceful Religion?" https://www.youtube.com/watch?v=T0W-a8Ux0Do [Jainism - among those considered.]
       Genevieve von Petzinger: "The Roots of Religion", TEDx Victoria: https://www.youtube.com/watch?v=4Zgwz_m7sRs / http://www.amara.org/en/videos/kO4GPJ0bFhyN/info/the-roots-of-religion-genvieve-von-petzinger-tedxvictoria/ 
         see also http://ideopsychology.com/2015/08/06/symbolic-communication-religious-squiggle-or-box-where-when/ 
+      
+      Is there a compendium of terse-but-devastating attempted refutations of religion? http://philosophy.stackexchange.com/questions/21762/is-there-a-compendium-of-terse-but-devastating-attempted-refutations-of-religion 
     -->
     <!-- Manwar Ali: Reclaiming Jihad (TEDx Exeter, 2016): https://www.youtube.com/watch?v=Vi8k6BG9KVk -->
     <!-- Morality without religion / secular morality: 
