--- a/science/index.html
+++ b/science/index.html
@@ -207,6 +207,10 @@
         <a href="https://en.wikipedia.org/wiki/Science_Friction:_Where_the_Known_Meets_the_Unknown">Wikipedia
         article about <span class="booktitle">Science Friction</span></a>.)
       </li>
+      <li>
+        <a href="Science is neither a philosophy nor a belief system">Isaac Physics</a>:
+        <q>Mastering Physics by Solving Problems: from School to University!</q>
+      </li>
     </ul>
 
     <h2 id="reading-papers">How to Read Papers and Other Scientific Literature</h2>
@@ -299,10 +303,10 @@
         evolved and how this changing perspective both gave rise to new
         methods and was influence by these methods. In addition to the evolution
         of these methods and theories, the book also discusses the importance
-        of scientific instruments, laboratories and journals.
+        of scientific instruments, laboratories and journals.</span>
       </li>
       <li lang="de">Störig, Hans Joachim:
-        <span class="booktitle">Kleine Weltgeschichte der Wissenschaft</span>. 
+        <i class="booktitle">Kleine Weltgeschichte der Wissenschaft</i>. 
         S. Fischer, 2007.
       </li>
       <li><a href="https://en.wikipedia.org/wiki/William_Cecil_Dampier">Dampier, 
@@ -576,6 +580,10 @@
         <i class="newspaper">The Guardian</i>, 15.03.2012.
       </li>
     </ul>
+    <!-- Publication bias:
+      * Bite Size Psych: "Is the number 1 fact about willpower wrong?": https://www.youtube.com/watch?v=gnSBnQo9-UM 
+        about the research on ego depletion, which was probably influenced by publication bias.
+    -->
 
     <!--h2>Science Myths</h2-->
     <!-- Mike Sutton: Spinach Iron Decimal Point Error Myth Busted. Tuesday, 21 December 2010: http://super-myths.blogspot.com.es/2010/12/spinach-iron-decimal-point-error-myth.html -->
