--- a/philscience/index.html
+++ b/philscience/index.html
@@ -519,7 +519,7 @@
         <a href="http://editions.flammarion.com/Albums_Detail.cfm?ID=35024&levelCode=home"><abbr>ISBN</abbr> 9782081224988</a>.
         <br /><span lang="en-GB"><a href="https://en.wikipedia.org/wiki/Ren%C3%A9_Thom" lang="fr">René Thom</a> 
         was a French mathematician who is probably best know as the founder of
-        <a href="https://en.wikipedia.org/wiki/Catastrophe_theory">catastrophy theory</a>.
+        <a href="https://en.wikipedia.org/wiki/Catastrophe_theory">catastrophy theory</a>.</span>
         <!-- See also P. de Brem: "René Thom, mathématicien philosophe", Banque de Savoirs, Essonne, 01.06.2005: http://www.savoirs.essonne.fr/thematiques/la-matiere/mathematiques/rene-thom-mathematicien-philosophe/ -->
       </li>
     </ul>
