Quote: Hitchens' razor.

--- a/philosophy/religion.html
+++ b/philosophy/religion.html
@@ -58,6 +58,12 @@
         <cite>Real Time With Bill Maher (<abbr>HBO</abbr>, 2012-02-03)</cite>
       </p>
     </blockquote>
+    <blockquote id="introquote">
+      <p>
+        <q cite="https://en.wikipedia.org/wiki/Hitchens%27s_razor">What can be asserted without evidence can be dismissed without evidence.</q>
+        <cite>Christopher Hitchens</cite>
+      </p>
+    </blockquote>
 
 
     <h2>What Should Replace Religion?</h2>
