Earl Lewis on why scientists need humanities.

--- a/humanities/index.html
+++ b/humanities/index.html
@@ -224,6 +224,12 @@
         to reduce the stunning complexity of the past to identity and class
         politics</q>.
       </li>
+      <li>Lewis, Earl:
+        <a href="https://www.youtube.com/watch?v=PV1XR7NQyNE">How <abbr title="science, technology, engineering and mathematics">STEM</abbr> Was Born: And Why Scientists Needs Humanists</a>
+        (6 minutes, YouTube, 7 November 2016):
+        argues that scientists needs people with a humanities background,
+        but does not talk about the value of the humanities in their own right.
+      </li>
       <!-- See also: 
         * "Scholar to Address Value of Humanities at Public Universities November 4", University of Tennessee, Knoxville: http://tntoday.utk.edu/2015/10/20/scholar-address-humanities-public-universities-november-4/ 
         * Matthew Long-Middleton & Ross Stinemetz: "The Value Of The Humanities", KCUR, 2 July 2013: http://kcur.org/post/value-humanities#stream/0 
