R. Benedict: The Chrysanthemum and the Sword.

--- a/science/hdm_scienceday.html
+++ b/science/hdm_scienceday.html
@@ -574,6 +574,8 @@
       <li>Duus, Peter: 
         <i class="booktitle">The Abacus and the Sword: The Japanese Penetration of Korea, 1895-1910</i>. University of California Press, 1998. (498 pages)
         <a href="http://www.ucpress.edu/book.php?isbn=9780520213616"><abbr>ISBN</abbr> 9780520213616</a>.
+        <br />(The book title is an allusion to the title of Ruth Benedict's book
+        <i class="booktitle">The Chrysanthemum and the Sword: Patterns of Japanese Culture</i> (1946).
       </li>
       <li>Kang, Hildi: 
         <i class="booktitle">Under the Black Umbrella: Voices from Colonial Korea, 1910–1945</i>. Cornell University Press, 2005. (192 pages)
@@ -597,6 +599,12 @@
       </li>
     </ul>
     <!-- Andre Schmid: Korea Between Empires 1895-1919. Columbia University Press, 2002. -->
+
+    <h4>The Chrysanthemum and the Sword</h4>
+    <p>Ruth Benedict's 1946 study 
+      <i class="booktitle"><a href="https://en.wikipedia.org/wiki/The_Chrysanthemum_and_the_Sword">The Chrysanthemum and the Sword: Patterns of Japanese Culture</a></i>
+      and its reception since its publication.
+    </p>
 
     <!-- Late Ottoman Empire / Turkey:
       * Ryan Gingeras: Sorrowful Shores: Violence, Ethnicity, and the End of the Ottoman Empire 1912-1923. Oxford University Press, 2011: https://global.oup.com/academic/product/sorrowful-shores-9780199698349
