World Philosophy Day 2016.

--- a/index.html
+++ b/index.html
@@ -99,8 +99,6 @@
       </li>
       <li>November 2015: why we still need <a href="philosophy/index.html">philosophy</a>.
       </li>
-      <li>November 2015: World Philosophy Day (see below).
-      </li>
     </ul>
     
     <h2 id="philoday">World Philosophy Day</h2>
@@ -108,9 +106,13 @@
       <abbr>UNESCO</abbr> established the 
       <strong><a href="http://www.unesco.org/new/en/social-and-human-sciences/themes/philosophy/philosophy-day-at-unesco/">World Philosophy Day</a></strong> in 2005. 
       The event is celebrated each year on the third Thursday of November.
-      In 2015, World Philosophy Day was celebrated on Thursday 19 November. 
+      In 2016, 
+      <a href="http://www.unesco.org/new/en/unesco/events/prizes-and-celebrations/celebrations/international-days/world-philosophy-day-2016/">World Philosophy Day</a>
+      was celebrated on Thursday 17 November.
     </p>
-    <p>Below are some resources published on the occasion of World Philosophy Day 2015:</p>
+    <p>In 2015, World Philosophy Day was celebrated on Thursday 19 November. 
+      Below are some resources published on the occasion of World Philosophy Day 2015:
+    </p>
     <ul>
       <li><a href="http://en.unesco.org/events/world-philosophy-day-2015-roundtable-plurality-languages-and-places-philosophy">Roundtable on plurality of languages and places of philosophy</a>:
         webcast of an event in Paris. 
