World Humanities Conference, Liège, Belgium, 2017.

--- a/humanities/index.html
+++ b/humanities/index.html
@@ -58,6 +58,11 @@
       </p>
     </blockquote>
 
+    <p style="background-color: #FDDB58; padding: 16px;">
+      <strong><a href="http://www.unesco.org/new/en/social-and-human-sciences/themes/most-programme/humanities-and-philosophy/world-humanities-conference/">World Humanities Conference</a>,
+      <span lang="fr">Liège</span>, Belgium, 6-12 August 2017.</strong> 
+    </p>
+
     <h2>The Humanities</h2>
     <p>The English language makes a distinction between &ldquo;science&rdquo;
       and the &ldquo;humanities&rdquo;, thereby implying that the humanities
