Philosophy: Sober: Ockham's Razors.

--- a/science/hdm_scienceday.html
+++ b/science/hdm_scienceday.html
@@ -899,13 +899,28 @@
       </li>
     </ul>
 
-    <h2>Philosophy (Including Philosophy of Science)</h2>
+    <h2 id="philosophy">Philosophy (Including Philosophy of Science)</h2>
     <ul>
       <li><span lang="de">Carl Friedrich von Weizsäcker</span> as philosopher.
         <br />See also
         <i class="booktitle" lang="de">Carl Friedrich von Weizsäcker</i> by 
         <span lang="de">Michael Drieschner</span> (Hamburg: Junius, 1992).
       </li>
+      <li>Sober, Elliott: 
+        <i class="booktitle">Ockham's Razors: A User's Manual</i>.
+        Cambridge University Press, 2015.
+        <a href="http://www.cambridge.org/de/academic/subjects/philosophy/philosophy-science/ockhams-razors-users-manual?format=PB"><abbr>ISBN</abbr> 9781107692534</a>.
+        <!-- @@check excerpt! -->
+        <!-- source: https://twitter.com/CambUP_PHILNYUK/status/799184105560768512 -->
+      </li>
+      <!-- 
+        * John Rawls: A Theor of Justice 
+          ** Jon Mandle: Rawls's 'A Theory of Justice': An Introduction. Cambridge UP, 2009: 
+            http://www.cambridge.org/de/academic/subjects/philosophy/political-philosophy/rawlss-theory-justice-introduction?format=PB
+          ** See also: Timothy Hinton: The Original Position. CUP, 2015.  source: https://twitter.com/CambUP_PHILNYUK/status/799184105560768512
+            ** http://www.cambridge.org/de/academic/subjects/philosophy/political-philosophy/original-position?format=PB 
+        * The Two Cultures. 
+      -->
     </ul>
 
     <h2>Science in Society</h2>
