Snow: The Two Cultures.

--- a/science/hdm_scienceday.html
+++ b/science/hdm_scienceday.html
@@ -906,6 +906,11 @@
         <i class="booktitle" lang="de">Carl Friedrich von Weizsäcker</i> by 
         <span lang="de">Michael Drieschner</span> (Hamburg: Junius, 1992).
       </li>
+      <li>Snow, C. P.:
+        <i class="booktitle">The Two Cultures</i> (1959).
+        See also the Wikipedia article
+        <a href="https://en.wikipedia.org/wiki/The_Two_Cultures">The Two Cultures</a>.
+      </li>
       <li>Sober, Elliott: 
         <i class="booktitle">Ockham's Razors: A User's Manual</i>.
         Cambridge University Press, 2015.
