Link to GitHub repo removed.

--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -429,6 +429,13 @@
         Imitatio: https://www.youtube.com/channel/UCbJMklvu5Hi-OZtq1YaMkcQ 
         Raven Foundation: https://www.youtube.com/user/raventelevision/ 
       -->
+      <!-- Keith Buhler: 
+        * http://www.keithbuhler.com/ 
+        * Philosophy Resources: http://www.keithbuhler.com/philosophy-resources 
+        * http://www.keithbuhler.com/students 
+        * https://github.com/keithbuhler 
+        * @@YouTube
+      -->
       <li>
         <a href="https://www.youtube.com/playlist?list=PL-0zpu2toenaUf-Z97Po8zj3VXJQ0wDiZ">Philosophy</a>
         is a course by Phil Fernandes, who is described as a Christian thinker
@@ -687,6 +694,7 @@
       </li>
     </ul>
 
+
     <h2 id="critical">Critical Thinking and Reasoning</h2>
     <p>Some of the resources below also cover the basics of logic.
       Resources that focus exclusively on logic are listed in a separate section.
@@ -791,6 +799,9 @@
         Prometheus Books, 2011. (398 p.) 
         <a href="http://www.prometheusbooks.com/index.php?main_page=product_info&cPath=1&products_id=2067"><abbr>ISBN</abbr> 978-1-61614-397-8</a>.
         <!-- Laurence A. Moran invites Christopher DiCarlo to give many lectures in his course on critical thinking: http://sandwalk.blogspot.de/2012/09/john-wilkins-defends-philosophy-begging.html -->
+      </li>
+      <li>
+        <a href="http://www.skepticsfieldguide.net/">The Skeptic's Field Guide</a>.
       </li>
     </ul>
     <!-- Many questions about teaching and assessing critical thinking on ResearchGate:
@@ -1324,9 +1335,6 @@
       rel="cc:attributionURL">Christophe Strobbe</a> is licensed under a 
       <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/" 
       lang="en-US">Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License</a>.
-    </p>
-    <p><a href="https://github.com/cstrobbe/philosophy-and-science">GitHub repository for
-      <i>Philosophy and Science</i></a>.
     </p>
   </footer>
 </body>
