--- a/humanities/index.html
+++ b/humanities/index.html
@@ -381,6 +381,9 @@
       the <a href="https://en.wikipedia.org/wiki/Battle_of_Tours">battle of Tours</a>,
       in which the Islamic cavalry repeatedly charged against the Frankish infantry?
       (See this YouTube video about the <a href="https://www.youtube.com/watch?v=q8q0PpIUN4g">Battle of Tours/Poitiers in 732</a>.)
+      <br /><a href="https://en.wikipedia.org/wiki/Tywin_Lannister">Tywin Lannister</a>'s first name
+      looks almost identical to the name of the Welsh town
+      <a href="https://en.wikipedia.org/wiki/Tywyn">Tywyn</a>, but the pronunciation is quite different.
     </p>
     <!-- Game of Thrones Cello Cover - Break of Reality: https://www.youtube.com/watch?v=ydRAb9cwHnA -->
 
