Global English / Linguistic Imperialism.

--- a/science/hdm_scienceday.html
+++ b/science/hdm_scienceday.html
@@ -809,7 +809,25 @@
       <li>
         Dutch; arguably the easiest foreign language for native speakers of German.
       </li>
+      <li>Global English / Linguistic Imperialism:
+        <ul>
+          <li>Phillipson, Robert:
+            <i class="booktitle">Linguistic Imperialism</i>. Oxford Applied Linguistics. Oxford University Press, 1992. (374 pages)
+            <a href="https://global.oup.com/academic/product/linguistic-imperialism-9780194371469?q=Linguistic%20Imperialism&lang=en&cc=de"><abbr>ISBN</abbr> 9780194371469</a>.
+          </li>
+          <li>Phillipson, Robert:
+            <i class="booktitle">Linguistic Imperialism Continued</i>. Routledge, 2010. (296 pages)
+            <a href="https://www.routledge.com/Linguistic-Imperialism-Continued/Phillipson/p/book/9780415872010"><abbr>ISBN</abbr> 9780415872010</a>.
+          </li>
+          <li>Crystal, David:
+            <i class="booktitle">English as a Global Language</i>. Canto Classics. Cambridge University Press. 
+            <a href="http://www.cambridge.org/de/academic/subjects/languages-linguistics/english-language-and-linguistics-general-interest/english-global-language-2nd-edition-1?format=PB"><abbr>ISBN</abbr> 9781107611801</a>.
+          </li>
+        </ul>
+      </li>
     </ul>
+    <!-- Yuen Ren Chao: "Language and Symbolic Systems", 1968: http://www.cambridge.org/de/academic/subjects/languages-linguistics/english-language-and-linguistics-general-interest/language-and-symbolic-systems?format=PB&isbn=9780521094573  -->
+    <!--  William A. Kretzschmar, Jr: "Language and Complex Systems", http://www.cambridge.org/de/academic/subjects/languages-linguistics/english-language-and-linguistics-general-interest/language-and-complex-systems?format=HB&isbn=9781107100459 -->
 
     <h2>Psychology</h2>
     <h3>Obedience to Authority (Milgram)</h3>
