Occam's razor & principle of parsimony.

--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -1101,6 +1101,32 @@
         The course is also available on
         <a href="https://itunes.apple.com/us/course/introduction-to-political/id718923554">iTunes</a>.
       </li>
+      <li>Occam's razor and the principle of parsimony:
+        <ul>
+          <li>Wikipedia: 
+            <a href="https://en.wikipedia.org/wiki/Occam%27s_razor">Occam's razor</a>.
+          </li>
+          <li>Kaye, Sharon:
+            <a href="http://www.iep.utm.edu/ockham/#H2">William of Ockham (Occam, c. 1280—c. 1349)</a> (section &ldquo;The Razor&rdquo;),
+            Internet Encylopedia of Philosophy.
+          </li>
+          <li>Gibb, Phil; Sugihara, Hiroshi:
+            <a href="http://www.physics.adelaide.edu.au/~dkoks/Faq/General/occam.html">What is Occam's Razor?</a> (1996, 1997).
+            This essay distinguishes Occam's original &ldquo;razor&rdquo; from the modern adaptations
+            that should be called &ldquo;the law of parsimony&rdquo; or &ldquo;the rule of simplicity&rdquo;.
+          </li>
+          <li>Thorburn, William:
+            <a href="http://www.logicmuseum.com/authors/other/mythofockham.htm">The Myth of Ockham's Razor</a>,
+            <i class="journal">Mind</i>, 2 (1918): 345-353.
+            <!-- @@to PDF! -->
+          </li>
+          <li>Sober, Elliott (University of Wisconsin, Madison): 
+            <i class="booktitle">Ockham's Razors: A User's Manual</i>. Oxford University Press, 2015..
+            <a href="http://www.cambridge.org/de/academic/subjects/philosophy/philosophy-science/ockhams-razors-users-manual?format=PB"><abbr>ISBN</abbr> 9781107692534</a>.
+            <!-- @@check excerpt -->
+          </li>
+        </ul>
+      </li>
       <!-- Several philosophy-related playlists on the channel of
         University College Dublin (UCD): 
         https://www.youtube.com/user/MyUCD/playlists
