--- a/science/hdm_scienceday.html
+++ b/science/hdm_scienceday.html
@@ -942,7 +942,6 @@
             http://www.cambridge.org/de/academic/subjects/philosophy/political-philosophy/rawlss-theory-justice-introduction?format=PB
           ** See also: Timothy Hinton: The Original Position. CUP, 2015.  source: https://twitter.com/CambUP_PHILNYUK/status/799184105560768512
             ** http://www.cambridge.org/de/academic/subjects/philosophy/political-philosophy/original-position?format=PB 
-        * The Two Cultures. 
       -->
     </ul>
 
@@ -975,6 +974,16 @@
         and it proposes a new framework for all types of science education from formal, to non-formal and informal approaches.</q>
       </li>
     </ul>
+
+    <!-- Grimm: KHM: 
+      * Christian Staas: "Gebrüder Grimm: Weder deutsch noch Volk" [Ein Gespräch mit dem Germanisten Heinz Rölleke über die wahre Herkunft der Grimmschen Märchen], Die Zeit, 6. Dezember 2012: http://www.zeit.de/2012/50/Brueder-Grimm-Maerchen-Roelleke
+      * Heinz Rölleke, Hrsg: Kinder- und Hausmärchen: Die handschriftliche Urfassung von 1810 (Reclams Universal-Bibliothek). Stuttgart: Reclam, 2007. 
+      * Heinz Rölleke: Die Märchen der Brüder Grimm: Eine Einführung (Reclams Universal-Bibliothek), 2004. 
+      * Heinz Rölleke, Hrsg: Grimms Märchen (Suhrkamp BasisBibliothek). 144 Seiten. 1998.
+      * Heinz Rölleke, Hrsg: Grimms Märchen, wie sie nicht im Buche stehen (insel taschenbuch), 1993. 
+      * Hans-Jörg Uther: Handbuch zu den Kinder- und Hausmärchen der Brüder Grimm: Entstehung - Wirkung - Interpretation. De Gruyter, 2013.
+      * Heinz Rölleke, Hrsg: Es war einmal: Die wahren Märchen der Brüder Grimm und wer sie ihnen erzählte. (480 S.) Eichborn, 2011.
+    -->
   </main>
 
   <footer>
