Mark Burgess on peer review.

--- a/science/index.html
+++ b/science/index.html
@@ -579,6 +579,15 @@
         <a href="https://www.theguardian.com/science/2012/mar/15/precognition-studies-curse-failed-replications">Precognition studies and the curse of the failed replications</a>,
         <i class="newspaper">The Guardian</i>, 15.03.2012.
       </li>
+      <li>Burgess, Mark:
+        <a href="http://markburgess.org/blog_peer.html">Why I stopped caring about peer review, and learned to love the work</a>,
+        <i class="blog">Mark Burgess</i>, 10.12.2014.
+        The <a href="https://en.wikipedia.org/wiki/Mark_Burgess_(computer_scientist)">author</a> 
+        claims that the peer review process does not (or no longer) ensure
+        quality in scientific publishing because it is too slow and it is influenced
+        by the interests of reviewers. The author does not try to prove that this
+        applies to all domains of science.
+      </li>
     </ul>
     <!-- Publication bias:
       * Bite Size Psych: "Is the number 1 fact about willpower wrong?": https://www.youtube.com/watch?v=gnSBnQo9-UM 
