+ Institute of Philosophy.

--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -970,6 +970,14 @@
         <a href="http://www.philosophy-foundation.org/resources/philosophy-foundation-publications">resources section</a>
         with recommended reading, publications, lectures, &ldquo;big questions&rdquo; and more things to get you started.
       </li>
+      <li>The 
+        <a href="http://philosophy.sas.ac.uk/">Institute of Philosophy</a>
+        at the School of Advanced Study was founded by the University of London in 2005.
+        According to the description on its website,
+        <q>The Institute's aim is to promote and facilitate high quality research in philosophy, 
+        making it available to the widest possible audience both inside and outside the 
+        <abbr>UK</abbr>'s academic community.</q>
+      </li>
     </ul>
 
     <h3>Germany</h3>
