+ Misc links section.

--- a/humanities/index.html
+++ b/humanities/index.html
@@ -387,6 +387,13 @@
     </p>
     <!-- Game of Thrones Cello Cover - Break of Reality: https://www.youtube.com/watch?v=ydRAb9cwHnA -->
 
+    <h2>Miscellaneous Other Links</h2>
+    <ul>
+      <li>
+        <a href="https://podio.com/site/creative-routines">The Daily Routines of Famous Creative People</a>,
+        <i class="website">Podio</i>, no date.
+      </li>
+    </ul>
   </main>
 
   <footer>
