Meiert's article; Wikipedia list of philo pubs.

--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -211,6 +211,15 @@
         is Associate Professor at the Department of Philosophy, Logic and Scientific Method
         at the London School of Economics and Political Science (<abbr>LSE</abbr>).
       </li>
+      <li>Meiert, Jens Oliver:
+        <a href="https://meiert.com/en/blog/20161031/why-philosophy-matters/">Why Philosophy Matters</a>
+        (31.10.2016):
+        <blockquote cite="https://meiert.com/en/blog/20161031/why-philosophy-matters/">
+          Philosophy is so important now because of two interconnected trends, 
+          two trends that can be argued to have spun out of control: 
+          religious extremism as well as scientific extremism.
+        </blockquote>
+      </li>
     </ul>
     <!-- Patrick Gentempo: "Unleashing the power of philosophy", TEDxMinot, 2014: uses "philosophy" in a very lose way. And quotes Ayn Rand's posthumous collection of essays "Philosophy: Who Needs It": https://en.wikipedia.org/wiki/Philosophy:_Who_Needs_It & https://www.youtube.com/watch?v=CXFkG34NGkU -->
 
@@ -929,6 +938,9 @@
       </li>
       <li><a href="http://philosophy.stackexchange.com/">Philosophy</a>,
         a question and answer site hosted by Stack Exchange.
+      </li>
+      <li>Wikipedia:
+        <a href="https://en.wikipedia.org/wiki/List_of_important_publications_in_philosophy">List of important publications in philosophy</a>.
       </li>
     </ul>
 
