--- a/philscience/fleck_ludwik.html
+++ b/philscience/fleck_ludwik.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" type="text/css" media="screen" href="../css/systemcolours.css" title="System colours" />
   <link rel="stylesheet" type="text/css" media="screen" href="../css/default.css" title="No colours" />
   <link rel="stylesheet" type="text/css" media="print" href="../css/print.css" title="Printer-friendly version" />
+  <link rel="stylesheet" type="text/css" media="screen" href="../css/meiert-qa.css" title="Meiert's QA Stylesheet" />
 </head>
 <body class="philsciencepage">
   <header>
