Updated rel attribute for alternate stylesheet.

--- a/science/hdm_scienceday.html
+++ b/science/hdm_scienceday.html
@@ -5,9 +5,9 @@
   <!--meta charset="utf-8" /--><!-- Either this line or the above! http://www.w3.org/TR/html-polyglot/ -->
   <title>HdM Science Day | Philosophy and Science</title>
   <link rel="stylesheet" type="text/css" media="screen" href="../css/s_124085_triad.css" title="Three-colour scheme" />
-  <link rel="stylesheet" type="text/css" media="screen" href="../css/systemcolours.css" title="System colours" />
-  <link rel="stylesheet" type="text/css" media="screen" href="../css/default.css" title="No colours" />
-  <link rel="stylesheet" type="text/css" media="screen" href="../css/meiert-qa.css" title="Meiert's QA Stylesheet" />
+  <link rel="alternate stylesheet" type="text/css" media="screen" href="../css/systemcolours.css" title="System colours" />
+  <link rel="alternate stylesheet" type="text/css" media="screen" href="../css/default.css" title="No colours" />
+  <link rel="alternate stylesheet" type="text/css" media="screen" href="../css/meiert-qa.css" title="Meiert's QA Stylesheet" />
 </head>
 <body class="sciencepage">
   <header>
