"Why Statistics" by Davidian & Louis.

--- a/science/mathematics.html
+++ b/science/mathematics.html
@@ -91,6 +91,13 @@
 
 
     <h2>Statistics and Probability</h2>
+    <ul>
+      <li>Davidian, Marie; Louis, Thomas A.:
+        <a href="http://science.sciencemag.org/content/336/6077/12.full">Why Statistics?</a> (editorial),
+        <i class="journal">Science</i>, Vol. 336, Issue 6077 (06.04.2012): page 12.
+      </li>
+    </ul>
+
     <p>Probability can be very counter-intuitive, see for example the Monty Hall paradox.</p>
     <ul>
       <li>Childers, Timothy:
