Link to Cross Validated / Statistics SE.

--- a/science/mathematics.html
+++ b/science/mathematics.html
@@ -92,6 +92,12 @@
 
     <h2>Statistics and Probability</h2>
     <ul>
+      <li>
+        <a href="http://stats.stackexchange.com/">Cross Validated</a>:
+        <q>a question and answer site for people interested in statistics, machine learning, data analysis, data mining, and data visualization.</q>
+        (Cross Validated is not a forum; see
+        <a href="http://stats.stackexchange.com/help/on-topic">What topics can I ask about here?</a>)
+      </li>
       <li>Davidian, Marie; Louis, Thomas A.:
         <a href="http://science.sciencemag.org/content/336/6077/12.full">Why Statistics?</a> (editorial),
         <i class="journal">Science</i>, Vol. 336, Issue 6077 (06.04.2012): page 12.
