Misc websites & Twitter accounts.

--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -1337,6 +1337,32 @@
         that discusses the subject of identity (and at some point refers to the
         <a href="https://en.wikipedia.org/wiki/Ship_of_Theseus">ship of Theseus</a>).
       </li>
+      <li>
+        <a href="https://thephilosopherseye.com/">The Philosopher's Eye</a> (blog)
+        and the associated
+        <a href="https://twitter.com/PhilosophersEye">Twitter account</a>
+        publish updates from the Wiley Blackwell Philosophy Team (not exclusively about philosophy).
+      </li>
+      <li>
+        <a href="http://www.philosophynews.com/">Philosophy News</a> (blog, currently managed by Paul Pardi)
+        and the associated
+        <a href="https://twitter.com/philosophynws">Twitter account @philosophynws</a>
+        publish news on events, calls for papers, new books and conference information
+        related to philosophy.
+      </li>
+      <li>
+        <a href="https://twitter.com/CambUP_PHILNYUK">@CambUP_PHILNYUK</a> is a Twitter
+        account where Cambridge University Press publishes 
+        <q>the latest news &amp; offerings in philosophical research from Cambridge University Press’ books &amp; journals</q>.
+      </li>
+      <!-- @@move to humanities
+        https://twitter.com/redaktionmerkur
+      <li>
+        <a href="https://twitter.com/Wagenbach_News">@Wagenbach_News</a>:
+        Twitter account of the German publisher 
+        <a href="http://www.wagenbach.de/" hreflang="de" lang="de">Klaus Wagenbach</a>.
+      </li>
+      -->
     </ul>
 
     <!-- Richard Dawkins: "The Tyranny of the Discontinuous Mind": https://richarddawkins.net/2013/01/the-tyranny-of-the-discontinuous-mind-christmas-2011/
