+ Philosophy Talk (radio)

--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -111,7 +111,7 @@
         <a href="https://en.wikipedia.org/wiki/Kenneth_Allen_Taylor">Kenneth Allen Taylor</a> 
         at 
         <a href="https://tedx.stanford.edu/2012">TEDx Stanford 2012</a>. 
-        <!-- Taylor: see also PhilosophyTalk: http://www.philosophytalk.org/about-us -->
+        <!-- Taylor: see also PhilosophyTalk: http://www.philosophytalk.org/about-us & https://twitter.com/philtalkradio (below) -->
       </li>
       <li>
         <a href="https://www.youtube.com/watch?v=cOBkV-3Ka2Q">Why Do Philosophy?</a> 
@@ -1354,6 +1354,14 @@
         <a href="https://twitter.com/CambUP_PHILNYUK">@CambUP_PHILNYUK</a> is a Twitter
         account where Cambridge University Press publishes 
         <q>the latest news &amp; offerings in philosophical research from Cambridge University Press’ books &amp; journals</q>.
+      </li>
+      <li>
+        <a href="https://www.philosophytalk.org/">Philosophy Talk</a>
+        is the website of a radio program in which,
+        <q>[e]each week, our two host philosophers invite you to join them in conversation 
+        on a wide variety of issues ranging from popular culture to our most deeply-held beliefs 
+        about science, morality, and the human condition</q>.
+        <a href="https://twitter.com/philtalkradio">@philtalkradio</a> is their Twitter account.
       </li>
       <!-- @@move to humanities
         https://twitter.com/redaktionmerkur
