Link Science Day 20 Jan 2017.

--- a/science/hdm_scienceday.html
+++ b/science/hdm_scienceday.html
@@ -85,6 +85,10 @@
         <a href="http://events.mi.hdm-stuttgart.de/2016-06-24-8-science-day">8th Science Day</a>,
         24 June 2016.
       </li>
+      <li>
+        <a href="http://events.mi.hdm-stuttgart.de/2017-01-20-9-science-day">9th Science Day</a>,
+        20 January 2017.
+      </li>
     </ul>
 
     <h2>Science Day Topics</h2>
