New topic: truth.

--- a/science/hdm_scienceday.html
+++ b/science/hdm_scienceday.html
@@ -969,6 +969,53 @@
     </ul>
 
     <h2 id="philosophy">Philosophy (Including Philosophy of Science)</h2>
+    <h3>Truth</h3>
+    <ul>
+      <li lang="de">Skirbekk, Gunnar: 
+        <i class="booktitle">Wahrheitstheorien. Eine Auswahl aus den Diskussionen über Wahrheit im 20. Jahrhundert</i>.
+        Suhrkamp, 1977. (532 Seiten)
+        <a href="http://www.suhrkamp.de/buecher/wahrheitstheorien-_27810.html"><abbr>ISBN</abbr> 978-3-518-27810-9</a>.
+      </li>
+      <li>Kirkham, Richard L.: 
+        <i class="booktitle">Theories of Truth: A Critical Introduction</i>.
+        <abbr>MIT</abbr> Press, 1995. (416 pages)
+        <a href="https://mitpress.mit.edu/books/theories-truth"><abbr>ISBN</abbr>  9780262611084</a>.
+      </li>
+      <li>Williams, Bernard: 
+        <i class="booktitle">Truth and Truthfulness: An Essay in Genealogy</i>.
+        Princeton University Press, 2004. (344 pages)
+        <a href="http://press.princeton.edu/titles/7328.html"><abbr>ISBN</abbr> 9780691117911</a>.
+        <!-- @@ chapter 1 as sample: http://press.princeton.edu/chapters/s7328.pdf -->
+      </li>
+      <li lang="de">
+        <i class="booktitle">Was ist Wahrheit? Eine philosophische Einführung</i>.
+        C.H.Beck, 2005. (133 Seiten)
+        <abbr>ISBN</abbr> 978-3406410529.
+      </li>
+      <li>Blackburn, Simon: 
+        <i class="booktitle">Truth: A Guide for the Perplexed</i>.
+        Penguin, 2006. (272 pages)
+        <a href="https://www.penguin.co.uk/books/54704/truth-a-guide-for-the-perplexed/"><abbr>ISBN</abbr> 978-0-141-01425-8</a>.
+      </li>
+      <li lang="de">Enders, Markus; Szaif, Jan:
+        <i class="booktitle">Die Geschichte des philosophischen Begriffs der Wahrheit</i>. de Gruyter Studienbuch. 
+        de Gruyter, 2008. (412 Seiten)
+        <a href="https://www.degruyter.com/viewbooktoc/product/36556"><abbr>ISBN</abbr> 978-3110177541</a>.
+      </li>
+      <li lang="de">Heinrich, Richard: 
+        <i class="booktitle">Wahrheit</i>. <abbr>UTB</abbr> Profile 3231.
+        Wien: facultas wuv, 2009. (106 Seiten)
+        <a href="http://www.utb-shop.de/wahrheit-3334.html"><abbr>ISBN</abbr> 9783825232313</a>.
+      </li>
+      <!-- 
+      <li>
+        <i class="booktitle"></i>.
+        <a href=""><abbr>ISBN</abbr> </a>.
+      </li>
+      -->
+    </ul>
+    
+    <h3>Other Topics</h3>
     <ul>
       <li><span lang="de">Carl Friedrich von Weizsäcker</span> as philosopher.
         <br />See also
@@ -988,7 +1035,7 @@
         <!-- source: https://twitter.com/CambUP_PHILNYUK/status/799184105560768512 -->
       </li>
       <!-- 
-        * John Rawls: A Theor of Justice 
+        * John Rawls: A Theory of Justice 
           ** Jon Mandle: Rawls's 'A Theory of Justice': An Introduction. Cambridge UP, 2009: 
             http://www.cambridge.org/de/academic/subjects/philosophy/political-philosophy/rawlss-theory-justice-introduction?format=PB
           ** See also: Timothy Hinton: The Original Position. CUP, 2015.  source: https://twitter.com/CambUP_PHILNYUK/status/799184105560768512
