Minor edit: book author.

--- a/science/hdm_scienceday.html
+++ b/science/hdm_scienceday.html
@@ -987,7 +987,7 @@
         <a href="http://press.princeton.edu/titles/7328.html"><abbr>ISBN</abbr> 9780691117911</a>.
         <!-- @@ chapter 1 as sample: http://press.princeton.edu/chapters/s7328.pdf -->
       </li>
-      <li lang="de">
+      <li lang="de">Janich, Peter:
         <i class="booktitle">Was ist Wahrheit? Eine philosophische Einführung</i>.
         C.H.Beck, 2005. (133 Seiten)
         <abbr>ISBN</abbr> 978-3406410529.
